@@ -1,5 +1,6 @@
 Changelog for Discuss.
 
+- Add new discuss.debug_templates setting to throw in HTML comments for every loaded tpl chunk.
 - #4768 Ask user to login if thread not found to allow links to private forums to work through login
 - Enable statistics globally (can be disabled in the manifest) so we can use it everywhere.
 - Fix url generation on notification emails.
